// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalculationSPage snapshots to data 1`] = `
<div
  className="PageContent__StPageContent-sc-1hov9g8-0 hKffIi"
>
  <div
    className="TitleBlock__StTitleBlock-sc-13pkgsm-0 cJutXF"
  >
    <h1>
      Results
    </h1>
  </div>
  <div
    className="CalculatorPage__StPageWrapper-j4r7p1-0 fVwMHu"
  >
    <p
      className="Texts__P-sc-1rxjhxp-2 gvEjmS"
    >
      Select a row from the table to see details of the calculation.
    </p>
    <div
      style={
        Object {
          "margin": "30px 0 0 0",
        }
      }
    >
      <div>
        <table
          className="Tables__StStandardTable-sc-1go5j8x-1 kGJGAI"
        >
          <thead>
            <tr>
              <td>
                NAME
              </td>
              <td>
                COUNTRY
              </td>
              <td>
                CREATED
              </td>
            </tr>
          </thead>
          <tbody>
            <tr
              onClick={[Function]}
            >
              <td>
                a
              </td>
              <td>
                b
              </td>
              <td>
                
              </td>
            </tr>
            <tr
              onClick={[Function]}
            >
              <td>
                ShipName
              </td>
              <td>
                ShipCountry
              </td>
              <td>
                
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`CalculationSPage snapshots to error 1`] = `
<div
  className="PageContent__StPageContent-sc-1hov9g8-0 hKffIi"
>
  <div
    className="TitleBlock__StTitleBlock-sc-13pkgsm-0 cJutXF"
  >
    <h1>
      Results
    </h1>
  </div>
  <div
    className="CalculatorPage__StPageWrapper-j4r7p1-0 fVwMHu"
  >
    <p
      className="Texts__P-sc-1rxjhxp-2 gvEjmS"
    >
      Select a row from the table to see details of the calculation.
    </p>
    <div
      style={
        Object {
          "margin": "30px 0 0 0",
        }
      }
    >
      <div
        className="sc-fzowVh iVgtZG"
      >
        <div
          className="sc-AxjAm RWZXz"
          type="error"
        >
          <svg
            fill="none"
            height={24}
            viewBox="0 0 10 10"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.66659 1.27334L8.72659 0.333344L4.99992 4.06001L1.27325 0.333344L0.333252 1.27334L4.05992 5.00001L0.333252 8.72668L1.27325 9.66668L4.99992 5.94001L8.72659 9.66668L9.66659 8.72668L5.93992 5.00001L9.66659 1.27334Z"
              fill="#EB0000"
            />
          </svg>
          <span>
            Loading failed
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CalculationSPage snapshots to loading 1`] = `
<div
  className="PageContent__StPageContent-sc-1hov9g8-0 hKffIi"
>
  <div
    className="TitleBlock__StTitleBlock-sc-13pkgsm-0 cJutXF"
  >
    <h1>
      Results
    </h1>
  </div>
  <div
    className="CalculatorPage__StPageWrapper-j4r7p1-0 fVwMHu"
  >
    <p
      className="Texts__P-sc-1rxjhxp-2 gvEjmS"
    >
      Select a row from the table to see details of the calculation.
    </p>
    <div
      style={
        Object {
          "margin": "30px 0 0 0",
        }
      }
    >
      <div
        className="sc-fzowVh iVgtZG"
      >
        <div
          className="sc-AxjAm fVWqyv"
          type="loading"
        >
          <svg
            fill="none"
            height={24}
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M12 1.84615C6.39219 1.84615 1.84615 6.39219 1.84615 12C1.84615 17.6078 6.39219 22.1538 12 22.1538C17.6078 22.1538 22.1538 17.6078 22.1538 12C22.1538 6.39219 17.6078 1.84615 12 1.84615ZM0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12Z"
              fill="#DEEDEE"
              fillRule="evenodd"
            />
            <path
              clipRule="evenodd"
              d="M3.26622 19.1615C3.62672 18.79 4.21764 18.7835 4.58608 19.1471C5.77978 20.3249 7.25115 21.1956 8.87067 21.6804C10.4902 22.1651 12.2065 22.2484 13.8669 21.9225C15.5272 21.5966 17.0788 20.8721 18.3845 19.8147C19.6902 18.7575 20.7095 17.4005 21.354 15.8651C21.9985 14.3299 22.249 12.6625 22.0841 11.0103C21.9191 9.35803 21.3437 7.76994 20.407 6.38681C19.4703 5.00356 18.2008 3.86748 16.7095 3.08099C15.2181 2.29444 13.5519 1.88235 11.8586 1.88235C11.3432 1.88235 10.9253 1.46097 10.9253 0.941176C10.9253 0.421379 11.3432 -4.54098e-07 11.8586 -4.76629e-07C13.8517 -5.63749e-07 15.8149 0.484934 17.5746 1.41299C19.3344 2.34109 20.8372 3.68426 21.9485 5.32528C23.0599 6.96643 23.7449 8.8543 23.9413 10.8218C24.1377 12.7893 23.8392 14.7738 23.073 16.5989C22.3068 18.424 21.0972 20.0322 19.5533 21.2824C18.0095 22.5326 16.1787 23.3864 14.2235 23.7702C12.2684 24.1539 10.2476 24.056 8.33952 23.4849C6.43142 22.9138 4.69353 21.8866 3.28059 20.4925C2.91215 20.129 2.90572 19.5331 3.26622 19.1615Z"
              fill="#007079"
              fillRule="evenodd"
            />
          </svg>
          <span>
            Loading calculations
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
